--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.rtl.css
@@ -440,6 +440,20 @@
   text-align: center;
   z-index: 1;
 }
+.class-choose .top #selected-classes button.ng-enter,
+.class-choose .top #selected-classes .empty.ng-enter {
+  transition: 0.5s linear all;
+  opacity: 0;
+}
+.class-choose .top #selected-classes button.ng-enter-stagger,
+.class-choose .top #selected-classes .empty.ng-enter-stagger {
+  transition-delay: 0.1s;
+  transition-duration: 0.5s;
+}
+.class-choose .top #selected-classes button.ng-enter.ng-enter-active,
+.class-choose .top #selected-classes .empty.ng-enter.ng-enter-active {
+  opacity: 1;
+}
 .class-choose .top #selected-classes,
 .class-choose .top .search-form {
   margin: 0 15px;
