--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.css
@@ -200,7 +200,7 @@ body .quiz-template .bottom .name {
 .box-style {
   background: #ffffff;
   box-shadow: 0px 1px 5px 0 rgba(0, 0, 0, 0.34);
-  padding: 15px 15px 30px 15px;
+  padding: 10px 10px 25px 10px;
   display: block;
   width: 100%;
   height: 179px;
@@ -268,18 +268,38 @@ body .quiz-template .bottom .name {
 .box-style .display .number {
   float: left;
   display: inline-block;
-  height: 116px;
+  height: 134px;
   width: 100%;
+}
+.box-style .display .number .title {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: flex-start;
+  align-items: flex-start;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+}
+.box-style .display .number .title .icon {
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  text-align: center;
+  color: #ffffff;
+  font-size: 28px;
+  flex-shrink: 0;
+  text-transform: capitalize;
+  margin-right: 10px;
 }
 .box-style .display .number h3,
 .box-style .display .number h5 {
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  margin: 0 0 14px 0;
+  margin: 0 10px 36px 0;
   padding: 0;
-  font-size: 25px;
-  line-height: 29px;
+  font-size: 22px;
+  line-height: normal;
   height: 58px;
   overflow: hidden;
   width: calc(80%);
@@ -305,7 +325,7 @@ body .quiz-template .bottom .name {
   display: block;
 }
 .box-style .progress-info .status {
-  margin-top: 18px;
+  margin-top: 10px;
 }
 .box-style .progress-info .status .status-title {
   float: left;
@@ -466,7 +486,7 @@ md-icon {
 }*/
 .delete {
   position: absolute;
-  top: 5px;
+  top: 12px;
   right: 0;
 }
 .delete-icon {
