--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -17,7 +17,7 @@ em {
 
 
 .vs-repeat-before-content, .vs-repeat-after-content {
-  display: block;
+    display: block;
 }
 
 input[type="search"] {
@@ -275,7 +275,7 @@ body {
     background: @textColorWhite;
     //background:black;
     box-shadow: 0px 1px 5px 0 rgba(0, 0, 0, 0.34);
-    padding: 15px 15px 30px 15px;
+    padding: 10px 10px 25px 10px;
     display: block;
     width: 100%;
     height: 179px;
@@ -363,17 +363,35 @@ body {
     .display .number {
         float: left;
         display: inline-block;
-        height: 116px;
+        height: 134px;
         width: 100%;
+
+        .title {
+            .displayFlex;
+            .align-items(flex-start);
+            .justifyContet(flex-start);
+
+            .icon {
+                width: 60px;
+                height: 60px;
+                line-height: 60px;
+                text-align: center;
+                color: @textColorWhite;
+                font-size: 28px;
+                flex-shrink: 0;
+                text-transform: capitalize;
+                margin-right: 10px;
+            }
+        }
 
         h3, h5 {
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
-            margin: 0 0 14px 0;
+            margin: 0 10px 36px 0;
             padding: 0;
-            font-size: 25px;
-            line-height: 29px;
+            font-size: 22px;
+            line-height: normal;
             height: 58px;
             overflow: hidden;
             width: calc(100% - 20px);
@@ -403,7 +421,7 @@ body {
         }
 
         .status {
-            margin-top: 18px;
+            margin-top: 10px;
 
             .status-title {
                 float: left;
@@ -458,10 +476,11 @@ body {
         height: 20px;
     }
 }
+
 .md-center {
-        left: 50%;
-        transform: translate3d(-50%, 0, 0);
-    }
+    left: 50%;
+    transform: translate3d(-50%, 0, 0);
+}
 
 /*.create-box {
 
@@ -652,7 +671,7 @@ md-icon {
 
 .delete {
     position: absolute;
-    top: 5px;
+    top: 12px;
     right: 0;
 }
 
