--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_commonTemplate.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_commonTemplate.cshtml
@@ -8,7 +8,10 @@
         <span ng-if="e.recommended" class="ribbon background text-capitalize" d-color="{{::e.name.length}}">@IndexResources.Suggested</span>
         <div class="display">
             <div class="number">
-                <h5 d-color="{{::e.name.length}}" ng-bind="::e.name"></h5>
+                <div class="title">
+                    <div class="icon background" d-color="{{::e.name.length}}" ng-bind="::e.name.substr(0,2)"></div>
+                    <h5 d-color="{{::e.name.length}}" ng-bind="::e.name"></h5>
+                </div>
                 <small class="ellipsis" ng-bind="::e.professor"></small><br />
                 <small class="ellipsis" ng-bind="::e.courseCode"></small>
             </div>
