--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -64,7 +64,7 @@ body {
 
     .itemPage header {
         position: fixed;
-        top: 70px;
+        top: @heightOfHeader;
         right: 0;
         left: 0;
         .transition(top, 0.2s, ease);
